<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog">

    <!-- title hard-written in so we don't have to deal with setting title field on a dialog -->
    <TextView
        android:id="@+id/delete_items_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:background="@drawable/rounded_title_bar"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/change_password_title">
    </TextView>
    <!-- Override the android:text attribute in Activity code -->

    <TextView
        android:id="@+id/title_band2"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="?attr/colorSecondary">
    </TextView>

    <EditText
        android:id="@+id/old_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:ems="10"
        android:hint="@string/current_password_hint"
        android:inputType="textPassword"
        android:password="true" />

    <EditText
        android:id="@+id/new_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:ems="10"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:password="true" />

    <EditText
        android:id="@+id/confirm_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:ems="10"
        android:hint="@string/confirm_new_password_hint"
        android:inputType="textPassword"
        android:password="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp">

        <Button
            android:id="@+id/cancel_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:backgroundTint="?colorSecondary"
            android:textColor="?colorOnSecondary"
            android:fontFamily="sans-serif"
            android:text="@string/cancel_dialog_button"
            app:layout_constraintEnd_toStartOf="@+id/ok_dialog_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ok_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="?colorPrimary"
            android:textColor="?colorOnPrimary"
            android:fontFamily="sans-serif"
            android:text="@string/ok_dialog_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_dialog_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>