<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="?colorSurface"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="75"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp">

                <ImageButton
                    android:id="@+id/profile_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?colorSurface"
                    android:contentDescription="@string/profile_picture"
                    android:scaleType="fitXY"
                    android:padding="2dp"
                    android:src="@drawable/omninventory_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/full_name"
                        android:textColor="?colorOnSurface"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/username"
                        android:textColor="?colorOnSurface"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/change_username_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="14dp"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:text="Change username"
                android:textColor="?colorOnSurface"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?colorPrimary" />


            <TextView
                android:id="@+id/change_name_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:text="Change name"
                android:textColor="?colorOnSurface"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?colorPrimary" />

            <TextView
                android:id="@+id/change_password_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:text="Change password"
                android:textColor="?colorOnSurface"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?colorPrimary" />

            <TextView
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:text="Log out"
                android:textColor="?colorPrimary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?colorPrimary" />

        </LinearLayout>
        <include layout="@layout/taskbar_profile"/>

    </LinearLayout>


</LinearLayout>
