...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="textPersonName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password (8-20 characters)"
                android:inputType="textPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:password="true" />
            </com.google.android.material.textfield.TextInputLayout>

...
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="?colorSecondary"
...
