...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/delete_button_label"
            android:src="@drawable/taskbar_delete" />

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/profile_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile_button_label"
            android:src="@drawable/taskbar_profile" />

...
